<resources>
    <string name="app_name">Lost and Found</string>
    <string name="logo">logo</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up_to_get_started">Sign Up to get started!</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">sign up</string>
    <string name="already_have_an_account_sign_in">Already have an account? sign in</string>
    <string name="hello_find_your_things_or_report_them">Hello, Find your things or report them!</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="forgot_password">forgot password</string>
    <string name="sign_in">sign in</string>
    <string name="create_an_account">Create an account</string>
    <string name="logoimage">LogoImage</string>
    <string name="welcome_to_lost_and_found_application">Welcome to Lost and Found Application</string>
    <string name="item_name">item_name</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="create_a_post">Create a post.</string>

    <string-array name="Categories">
        <item>Clothes</item>
        <item>Electronics</item>
        <item>Household goods</item>
        <item>Personal Belongings</item>
        <item>Other</item>

    </string-array>

</resources>