<?xml version="1.0" encoding="UTF-8"?>

    <LinearLayout
    android:padding="20dp"
    android:background="#ffff"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_height="160dp"
        android:layout_width="160dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:id="@+id/Logo_image"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/Logo_name"
        android:textSize="36sp"
        android:text="@string/hello_find_your_things_or_report_them"
        android:fontFamily="@font/amaranth_italic"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/Sign_in"
        android:textSize="18sp"
        android:text="@string/sign_in_to_continue"
        android:fontFamily="@font/actor"
        />


    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        >


    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/email"
        android:hint="@string/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress">
    </com.google.android.material.textfield.TextInputEditText>

</com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/password"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:passwordToggleEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textPassword">
    </com.google.android.material.textfield.TextInputEditText>

</com.google.android.material.textfield.TextInputLayout>

    <Button
        android:background="#0000"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:id="@+id/forgot_password"
        android:textSize="14sp"
        android:text="@string/forgot_password"
        android:layout_marginTop="6dp"
        android:layout_gravity="end"
        android:textColor="#000"
        />

    <Button
        android:padding="10dp"
        android:background="@color/black"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/signin_page"
        android:text="@string/sign_in"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:textColor="#fff"
        />

    <Button
        android:background="#0000"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/create_account"
        android:textSize="14sp"
        android:text="@string/create_an_account"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        />

</LinearLayout>

</LinearLayout>